navbar and cover 3.1v

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,34 +1,34 @@
 //header
 
 .notion-header__cover.has-cover {
-    position: absolute !important;
-    width: 100% !important;
-    top: 0 !important;
-    margin-top: -105px !important;
-    height: 60vh !important;
-    max-height: 60vh !important;
-    z-index: -2 !important;
-    opacity: .5 !important;
-    -webkit-mask-image: var(--color-mask-default) !important;
-    mask-image: var(--color-mask-default) !important;
-    
+  position: absolute !important;
+  width: 100% !important;
+  top: 0 !important;
+  margin-top: -142px !important;
+  height: 60vh !important;
+  max-height: 60vh !important;
+  z-index: -2 !important;
+  opacity: 0.5 !important;
+  -webkit-mask-image: var(--color-mask-default) !important;
+  mask-image: var(--color-mask-default) !important;
 }
 
 .notion-header__cover.no-cover {
-    display: none!important;
+  display: none !important;
 }
 
-.notion-header__cover:after, .footer-cover:before {
-    content: ""!important;
-    position: absolute!important;
-    z-index: 1!important;
-    bottom: -2px!important;
-    left: 0!important;
-    background-image: var(--theme-gradient)!important;
-    width: 100%!important;
-    height: 100%!important;
+.notion-header__cover:after,
+.footer-cover:before {
+  content: "" !important;
+  position: absolute !important;
+  z-index: 1 !important;
+  bottom: -2px !important;
+  left: 0 !important;
+  background-image: var(--theme-gradient) !important;
+  width: 100% !important;
+  height: 100% !important;
 }
 
-.notion-header__title{
-    display: none !important;
+.notion-header__title {
+  display: none !important;
 }
