--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -6,6 +6,7 @@
     height: auto !important;
     /* margin: 20px auto !important; */
     margin: 0 auto !important;
+    margin-top: 20px !important;
     padding-top: 15px !important;
     padding: 0px 0px !important;
     transition: box-shadow .2s ease-in-out !important;
