--- a/style/main.css
+++ b/style/main.css
@@ -238,7 +238,7 @@ p, p.notion-text__content {
   position: absolute !important;
   width: 100% !important;
   top: 0 !important;
-  margin-top: -105px !important;
+  margin-top: -142px !important;
   height: 60vh !important;
   max-height: 60vh !important;
   z-index: -2 !important;
@@ -251,7 +251,8 @@ p, p.notion-text__content {
   display: none !important;
 }
 
-.notion-header__cover:after, .footer-cover:before {
+.notion-header__cover:after,
+.footer-cover:before {
   content: "" !important;
   position: absolute !important;
   z-index: 1 !important;
@@ -273,6 +274,7 @@ p, p.notion-text__content {
   height: auto !important;
   /* margin: 20px auto !important; */
   margin: 0 auto !important;
+  margin-top: 20px !important;
   padding-top: 15px !important;
   padding: 0px 0px !important;
   transition: box-shadow 0.2s ease-in-out !important;
